{
    "name": "InputControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "567d959c-7ecb-4989-8644-c94b640ffc36",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "PassThrough",
                    "id": "f8729277-06e3-45a3-b6f0-391860b194bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeltaPosition",
                    "type": "PassThrough",
                    "id": "b9464834-3804-4c6b-8946-748b083703fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovementStop",
                    "type": "PassThrough",
                    "id": "07e73a4d-5a42-481d-9d15-1901897fa815",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "002bd3b0-7f0d-4a71-b036-390e4b995fd3",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a141f58e-5d02-4a0a-aacf-0c0f19f1b647",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeltaPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c60ed3e-f7ce-4c74-8fcb-8ba2a7867ddf",
                    "path": "<Pointer>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "MovementStop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Editor",
            "bindingGroup": "Editor",
            "devices": []
        }
    ]
}